	  use with the IAR toolchain.  From Kha Vo (2016-04-08)
	* Fix miscellaneous build issues for the IAR compiler.  From Kha Vo
	  (2016-04-08).
	* tools/ide_exporter.py:  IDE exported Python script for use with the
	  IAR toolchain.  From Kha Vo (2016-04-08).
	* STM3220G-EVAL:  Add support for both the IAR and uVision GCC IDEs
	  From Kha Vo (2016-04-08).
	* STM32F429I Discovery:  Add support for the uVision GCC IDE.   From
	* Kha Vo (2016-04-08).
	* libc/signal and include/signal.h: Rename sigset() to signal().
	  sigset() is the System V function; signal() is the obsoleted POSIX
	  name.  These seem to be equivalent.  Neither are relevant in modern
	  POSIX programming but the name signal() probably has the better
	  credentials.  sigset() is now relegated to a #define in signal.h that
	  makes it equivalent to signal() (2016-04-10).
	* configs/nucleus2g:  Removed the Nucleus2G configuration.  There has
	  not been any activity with the commercial board in a few years and it
	  no longer appears to be available from the 2g-eng.com website.
	  Since the board is commercial and no longer publically available, it
	  no longer qualifies for inclusion in the open source repositories.
	  The code as of this data is still available in the Obsoleted
	  repository at configs/nucleus2g (2016-04-12).
	* arch/arm/src/stm32l4: Fix the STM32L4 SPI driver.  That SPI driver is
	  quite different. They now handle frames of arbitrary size between 4
	  and 16 bits. It was broken before a new bit has to be set (rx fifo
	  threshold) to handle <= 8-bit transactions. If not set, the default is
	  16-bit packed >=8-bit frames and the RXNE bit is never set (it is set
	  when 16-bits are received). weird things as always.
	  This also add 8-bit access routines to the data register, because a
	  16-bit access to the data register when the frame size is below 9 bits
	  is interpreted as a packed dual frame exchange. Sebastien Lorquet
	  (2016-04-13).